[package]
name = "rustls-fido"
version = "0.1.0"
edition = "2024"

[dependencies]
authenticator = { version = "0.4.1", default-features = false, features = ["crypto_openssl", ] }
aws-lc-rs = { version = "1.12", default-features = false , features = ["aws-lc-sys"]}
base64 = "0.22"
log = { version = "0.4.8" }
pki-types = { package = "rustls-pki-types", version = "1.11", features = ["alloc"] }
rusqlite = "0.35.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "1"
serde_repr = "0.1.20"
serde_tuple = "1.1.0"
webauthn-rs = { version = "0.5.1", features = ["conditional-ui"] }
webauthn-rs-proto = "0.5.1"
x509-parser = "0.17"
thiserror = "2.0.12"